support compiling with visual studio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,27 @@ cmake_minimum_required(VERSION 3.3)
 
 project(tgs2png VERSION 0.1.0 LANGUAGES C)
 
+if (MSVC)
+  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  set(ZLIB_LIBRARY "${_VCPKG_INSTALLED_DIR}/x64-windows/lib/zlib.lib")
+  set(ZLIB_INCLUDE_DIR "${_VCPKG_INSTALLED_DIR}/x64-windows/include/zlib.h")
+  set(PNG_LIBRARY "${_VCPKG_INSTALLED_DIR}/x64-windows/lib/libpng.16.lib")
+  set(PNG_PNG_INCLUDE_DIR "${_VCPKG_INSTALLED_DIR}/x64-windows/include/png.h")
+  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  include_directories("${PROJECT_SOURCE_DIR}/winlibs")
+  include_directories("${_VCPKG_INSTALLED_DIR}/x64-windows/include")
+endif ()
+
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(PNG REQUIRED libpng)
-pkg_check_modules(RLOTTIE rlottie)
+
+if (MSVC)
+  find_package(ZLIB REQUIRED)
+  find_package(PNG REQUIRED)
+  pkg_check_modules(RLOTTIE rlottie)
+else ()
+  pkg_check_modules(PNG REQUIRED libpng)
+  pkg_check_modules(RLOTTIE rlottie)
+endif ()
 
 if (NOT RLOTTIE_FOUND)
   add_subdirectory("rlottie")
@@ -23,13 +41,25 @@ if (USE_ASAN)
 endif (USE_ASAN)
 
 # binary
-add_compile_options(-Wall -Werror)
-add_executable(tgs2png "tgs2png.c")
+if (MSVC)
+  add_compile_options(
+      $<$<CONFIG:>:/MT> #---------|
+      $<$<CONFIG:Debug>:/MTd> #---|-- Statically link the runtime libraries
+      $<$<CONFIG:Release>:/MT> #--|
+  )
+  add_executable(tgs2png "tgs2png.c" "winlibs/getopt.c" "winlibs/nanosleep.c")
+else ()
+  add_compile_options(-Wall -Werror)
+  add_executable(tgs2png "tgs2png.c")
+endif ()
 
 target_include_directories(tgs2png PUBLIC ${PNG_INCLUDE_DIRS})
 target_link_directories(tgs2png PRIVATE ${PNG_LIBRARY_DIRS})
 
 target_compile_options(tgs2png PRIVATE)
-target_link_libraries(tgs2png ${RLOTTIE_LIBRARIES} ${PNG_LIBRARIES} m)
+target_link_libraries(tgs2png ${RLOTTIE_LIBRARIES} ${PNG_LIBRARIES})
+if (UNIX)
+  target_link_libraries(tgs2png m)
+endif ()
 
 install(TARGETS tgs2png DESTINATION ${CMAKE_INSTALL_BINDIR})
